avoid page jump on menu open, adjust spacings, make menu slightly faster

--- a/user/themes/sensorium20/src/assets/scss/components/_showcasesection.scss
+++ b/user/themes/sensorium20/src/assets/scss/components/_showcasesection.scss
@@ -28,7 +28,9 @@
 			margin-bottom: $spacing-section-huge;
 		}
 
+		&--theme,
 		&--reverseorder {
+			margin-bottom: 0.2rem;
 			.cell {
 				order: 2;
 			}
